--- a/estilo.css
+++ b/estilo.css
@@ -162,3 +162,15 @@ form input,textarea{
 	border-radius: 5px;
 	width:100%; /* contenido: 150px, contenedor: form(150px) => 150px = 100% 150px = 100% */
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+	p {
+		font-size: 2.015625vw;
+	}
+}
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+	p {
+		font-size: 1.515625vw;
+	}
+}
